feat: swagger documentation details added
